# Lenga-mcp

./: .gitignore  README.md  main.py  pyproject.toml
lenga_mcp/: __init__.py  chunking.py  parsers.py  server.py
local_context/: employment_act_kenya.txt  land_tenure_registry.json  mpesa_transaction_data.csv
